// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu should render 1`] = `
.c0 {
  margin: 1em 0 0 0.25em;
  padding: 0;
  list-style-type: none;
}

<ul
  className="c0"
/>
`;

exports[`Menu should render closed menu 1`] = `
.c5 {
  text-align: center;
}

.c2 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: unset;
}

.c4 {
  font-size: 1.5em;
}

.c0 {
  margin: 1em 0 0 0.25em;
  padding: 0;
  list-style-type: none;
}

.c1 {
  display: block;
  padding: 1em;
  line-height: 1.5em;
  height: 1.5em;
  font-weight: 300;
  text-transform: uppercase;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  margin-left: 1rem;
  opacity: 0;
}

<ul
  className="c0"
>
  <li
    className="c1"
  >
    <div
      className="c2"
      fontFamily="exo"
      size="normal"
    >
      <div
        className="c3"
      >
        <span
          className="c4 c5 lni lni-home"
        />
        <span
          className="c6 menu-text"
        >
          Home
        </span>
      </div>
    </div>
  </li>
  <li
    className="c1"
  >
    <div
      className="c2"
      fontFamily="exo"
      size="normal"
    >
      <div
        className="c3"
      >
        <span
          className="c4 c5 lni lni-users"
        />
        <span
          className="c6 menu-text"
        >
          Users
        </span>
      </div>
    </div>
  </li>
  <li
    className="c1"
  >
    <div
      className="c2"
      fontFamily="exo"
      size="normal"
    >
      <div
        className="c3"
      >
        <span
          className="c4 c5 lni lni-rocket"
        />
        <span
          className="c6 menu-text"
        >
          Devices
        </span>
      </div>
    </div>
  </li>
  <li
    className="c1"
  >
    <div
      className="c2"
      fontFamily="exo"
      size="normal"
    >
      <div
        className="c3"
      >
        <span
          className="c4 c5 lni lni-briefcase"
        />
        <span
          className="c6 menu-text"
        >
          Costs
        </span>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Menu should render items 1`] = `
.c5 {
  text-align: center;
}

.c2 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: unset;
}

.c4 {
  font-size: 1.5em;
}

.c0 {
  margin: 1em 0 0 0.25em;
  padding: 0;
  list-style-type: none;
}

.c1 {
  display: block;
  padding: 1em;
  line-height: 1.5em;
  height: 1.5em;
  font-weight: 300;
  text-transform: uppercase;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  margin-left: 1rem;
  opacity: 1;
}

<ul
  className="c0"
>
  <li
    className="c1"
  >
    <div
      className="c2"
      fontFamily="exo"
      size="normal"
    >
      <div
        className="c3"
      >
        <span
          className="c4 c5 lni lni-home"
        />
        <span
          className="c6 menu-text"
        >
          Home
        </span>
      </div>
    </div>
  </li>
  <li
    className="c1"
  >
    <div
      className="c2"
      fontFamily="exo"
      size="normal"
    >
      <div
        className="c3"
      >
        <span
          className="c4 c5 lni lni-users"
        />
        <span
          className="c6 menu-text"
        >
          Users
        </span>
      </div>
    </div>
  </li>
  <li
    className="c1"
  >
    <div
      className="c2"
      fontFamily="exo"
      size="normal"
    >
      <div
        className="c3"
      >
        <span
          className="c4 c5 lni lni-rocket"
        />
        <span
          className="c6 menu-text"
        >
          Devices
        </span>
      </div>
    </div>
  </li>
  <li
    className="c1"
  >
    <div
      className="c2"
      fontFamily="exo"
      size="normal"
    >
      <div
        className="c3"
      >
        <span
          className="c4 c5 lni lni-briefcase"
        />
        <span
          className="c6 menu-text"
        >
          Costs
        </span>
      </div>
    </div>
  </li>
</ul>
`;

exports[`Menu should render open menu 1`] = `
.c5 {
  text-align: center;
}

.c2 {
  font-family: "Exo 2",sans-serif;
  font-size: 16px;
  color: unset;
}

.c4 {
  font-size: 1.5em;
}

.c0 {
  margin: 1em 0 0 0.25em;
  padding: 0;
  list-style-type: none;
}

.c1 {
  display: block;
  padding: 1em;
  line-height: 1.5em;
  height: 1.5em;
  font-weight: 300;
  text-transform: uppercase;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  margin-left: 1rem;
  opacity: 1;
}

<ul
  className="c0"
>
  <li
    className="c1"
  >
    <div
      className="c2"
      fontFamily="exo"
      size="normal"
    >
      <div
        className="c3"
      >
        <span
          className="c4 c5 lni lni-home"
        />
        <span
          className="c6 menu-text"
        >
          Home
        </span>
      </div>
    </div>
  </li>
  <li
    className="c1"
  >
    <div
      className="c2"
      fontFamily="exo"
      size="normal"
    >
      <div
        className="c3"
      >
        <span
          className="c4 c5 lni lni-users"
        />
        <span
          className="c6 menu-text"
        >
          Users
        </span>
      </div>
    </div>
  </li>
  <li
    className="c1"
  >
    <div
      className="c2"
      fontFamily="exo"
      size="normal"
    >
      <div
        className="c3"
      >
        <span
          className="c4 c5 lni lni-rocket"
        />
        <span
          className="c6 menu-text"
        >
          Devices
        </span>
      </div>
    </div>
  </li>
  <li
    className="c1"
  >
    <div
      className="c2"
      fontFamily="exo"
      size="normal"
    >
      <div
        className="c3"
      >
        <span
          className="c4 c5 lni lni-briefcase"
        />
        <span
          className="c6 menu-text"
        >
          Costs
        </span>
      </div>
    </div>
  </li>
</ul>
`;
